--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     header {
         background-color: rgb(18, 18, 18);
+        padding: 500px;
         text-align: center;
         font-size: 35px;
         color: white;
