--- a/index.html
+++ b/index.html
@@ -4,31 +4,44 @@
     <title>Metoda Backtracking</title>
     <style>
     * {
-        box-sizing: border-box;
+        box-sizing:border-box;
     }
-
     header {
-        background-color: rgb(18, 18, 18);
-        padding: 500px;
-        text-align: center;
-        font-size: 35px;
+        padding: 1px;
+        height: 160px;
+        background-color: rgb(18, 18, 18, 0.75);
+        text-align:center;
+        font-size: 25px;
         color: white;
     }
     body {
+        background-color: rgb(0, 0, 20);
+        background-image:url(image/background1.png);
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+    }
+
+    nav {
+        margin-top: 20px;
+        margin-left: 180px;
+        border:2px rgb(0, 255, 119);
+        width: 75%;
+        padding: 185px;
         background-color: black;
-        padding: 100px;
-        text-align: center;
-        font-size: 15px;
-        color: green;
     }
 </style>
 </head>
 <body>
+<div>
     <header>
-        <h1 style="color:green; font-family:courier; text-align:center; font-size:150%;">METODA BAKCTRACKING<br>software educational</h1>
-    </header>
-
-    <p style="color:green; font-family:courier; text-align:center;"> Ceva despre backtracking<br>lmao</p>
-
+        <h1 style="color:green; font-family:courier; font-size:120%;">METODA BAKCTRACKING<br>software educational</h1>
+    </header> 
+</div>
+<div>
+    <nav>
+        <p style="color:green; font-family:courier; text-align:center;"> Ceva despre backtracking<br>lmao</p>
+    </nav>
+</div>
 </body>
 </html>
